--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:80/apiTS2/api"
+  "proxy": "http://tool-swap.com:8000/api"
 }
