--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080/api/",
+  "proxy": "http://localhost:80/",
   "homepage": "http://tool-swap.com"
 }
